Closed Bug 86267 Opened 25 years ago Closed 25 years ago

Xlib: form checkboxes are not drawn

Categories

(Core :: Layout: Form Controls, defect)

x86
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: timecop, Assigned: timecop)

Details

Attachments

(2 files)

When a form entry "checkbox" is present, such as in bugzilla bug screen, "remove selected CCs", the checkmark is not drawn. RenderingContext::FillPolygon was not implemented correctly. Patch follows.
r=bryner
Little background on why these changes were done: change from Convex to Complex was done because there is only one FillPolygon implementation, and the points array given to it can be either complex shape (case of the checkmark on a checkbox widget), or simple shape like a rectangle or something. Anyway, this is what fixes this bug. the rest of the changes were just to make the code a little bit more readable.
++i is a better statement than i++, but for primitives this is more a style issue than a performance one (beware postfix ++ and -- on real iterators, though); and I know that was already in the code ... so I won't make you fix it. sr=scc
a=dbaron for trunk checkin (on behalf of drivers)
fix checked in
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
verifying on build 2001-06-21-04-trunk
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: