Bugzilla Bug 86267 Xlib: form checkboxes are not drawn patch by timecop@network.email.ne.jp r=bryner, sr=scc, a=dbaron